# deep_learning_from_scratch_copy_and_paste

./: README.md  pyproject.toml
volume1/: perceptron.py
