[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-learning-from-scratch"
version = "0.1.0"
description = "Sample code and exercises for studying deep learning from scratch."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]
